changes by juned
