# src/api/seller/service.js
@@ -1,30 +1,34 @@
 /**
- * method POST
- * description To calculate pickUp_start and end_time
+ * @method POST
+ * @description Used to calculate time 
  */
+//This is a function which takes dynamic time in string with diffrent time format and also we know the time given by 
+//user is in which format it can be hour , min and both
+//so this function takes time convert them  in required format and add that in current actual time
 
-export const calculatePickupTimes = (PickUpTime) => {
-    const now = new Date();
+export const timeFormatter = ( defaultTime ) => {
+    const now = new Date();       //get currentTime and date
 
-    let estimatedPickupTime = new Date(now);
+    let time = new Date(now);    //copy of current time we will modify this only
 
     // extract hours  (Given time se extract hour)
-    const hoursMatch = PickUpTime.match(/(\d+)\s*hr/);
+    const hoursMatch = defaultTime.match(/(\d+)\s*hr/);     // hoursMatch = ["1 hr", "1"]
     // extract minutes
-    const minutesMatch = PickUpTime.match(/(\d+)\s*min/);
+    const minutesMatch = defaultTime.match(/(\d+)\s*min/);   //minutesMatch = ["20 min", "20"]
 
-    const hours = hoursMatch ? parseInt(hoursMatch[1]) : 0;
+    const hours = hoursMatch ? parseInt(hoursMatch[1]) : 0;  //in integer
     const minutes = minutesMatch ? parseInt(minutesMatch[1]) : 0;
 
     // add hours
-    estimatedPickupTime.setHours(
-        estimatedPickupTime.getHours() + hours
+    time.setHours(
+        time.getHours() + hours
     );
 
     // add minutes
-    estimatedPickupTime.setMinutes(
-        estimatedPickupTime.getMinutes() + minutes
+    time.setMinutes(
+        time.getMinutes() + minutes
     );
 
-    return estimatedPickupTime;
+    return time;
 }
+
